<resources>
    <string name="app_name">DelicieuxApp</string>
    <string name="resto_name">Italiano Ristorante</string>
    <string name="resto_loc">Gubeng, Surabaya</string>
    <string name="resto_type">Fine Dining - Italian, Steak</string>
    <string name="currency">$</string>
    <string name="cost">Cost for two - Rp 350.000 (approx.)</string>
    <string name="payment">Cash, Credit Card, Debit Card</string>
    <string name="loc">Your Location     v</string>
    <string name="name_loc">Jalan Gubeng, Surabaya</string>
    <string name="search_bar">Search Restaurant..</string>
    <string name="comb_kate">Newest first </string>
    <string name="my">My Profile</string>
    <string name="email">E-mail address</string>
    <string name="fname">First name</string>
    <string name="lname">Last name</string>
    <string name="birth">Birthdate</string>
    <string name="hp">Mobile</string>
    <string name="fafo">Favorite Food</string>
    <string name="fare">Favorite Restaurant</string>
    <string name="search">Search your location</string>
    <string name="kliks">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="home">Home</string>
    <string name="akun">Account</string>
    <string name="sign_out">Sign out</string>

</resources>